Testimonial vertical align fix & testimonial styling tweaks

--- a/assets/sass/templates/_cta_bar.scss
+++ b/assets/sass/templates/_cta_bar.scss
@@ -12,5 +12,6 @@
   & .text {
     color: $black;
     height: 50px;
+    font-size: 1.2rem;
   }
 }
